fix(styles): prevent flex item height collapse

--- a/projects/styles/src/layout.css
+++ b/projects/styles/src/layout.css
@@ -19,7 +19,6 @@
     &[nve-layout~='column'] {
       display: flex;
       margin: 0;
-      min-height: 0;
     }
 
     &[nve-layout~='full'],
